# fp4_rnn

./: README.md  dune-project  fp4_rnn.opam
.github/workflows/: workflow.yml
lib/: dune
lib/nnlib/: dune  functions.ml  nn.ml
test/: dune
